--- a/src/templates/test/test.script.ejs
+++ b/src/templates/test/test.script.ejs
@@ -1,3 +1,4 @@
 <script>
   document.querySelector(".ejs-red").style.color = "black";
+  const variable = document.querySelector("param").dataset["param"];
 </script>
