use shadow root

--- a/src/templates/test/test.script.ejs
+++ b/src/templates/test/test.script.ejs
@@ -1,4 +1,5 @@
 <script>
-  document.querySelector(".ejs-red").style.color = "black";
-  const variable = document.querySelector("param").dataset["param"];
+  window.onload = () => {
+    console.log($);
+  };
 </script>
