--- a/src/templates/test/test.ejs
+++ b/src/templates/test/test.ejs
@@ -1,9 +1,13 @@
 <style>
+  .ejs-back {
+    background-color: gray;
+    height: 100%;
+  }
   .ejs-red {
     color: red;
   }
 </style>
-<div>
+<div class="ejs-back">
   this is test
   <?= test?>
   <div data-param="<?= test?>"></div>
